 - updated JUnit 5 to version 5.4.0
 - Kotlin language can now be used in all SportsTracker Maven modules
   (was limited to st-exerciseviewer before)
 - updated Kotlin to version 1.3.30
 - automatic check for SportsTracker application updates, the latest version
   number is downloaded from the SportsTracker website
   (checked on each application start after 30 seconds)
- Module st-util:
  - ported most classes and unit tests from Java to Kotlin, so there is less
    code, it's null safe, and fewer tests are needed
  - refactoring: moved all time-related functions from class FormatUtils to
    new class TimeUtils
 ExerciseViewer changes:
 - TopoGrafixGpxParser: bugfix for issue #188, GPX import failed if there are
   samples without heartrate data

v7.6.0:
 SportsTracker changes:
 - updated to JDK 11 (JDK 9 and JDK 10 are not supported by Oracle anymore)
   - JavaFX has been added as dependencies, not part of the JDK anymore
   - JDK used for development and packaging: AdoptOpenJDK 11.0.2
 - updated Kotlin to version 1.3.20
 - fixed all reasoned Kotlin compiler warnings
 - fixed all reasoned Java compiler warnings, suppressed the others (generics)
 - GitHub issue #186: Exercise/Note/Weight Dialog: bugfix for date entries in
   the textfield, the new date is not ignored anymore
 - updated Java requirement to Java 10
   - tested Local Variable Type Inference (JEP 286) in class STApplication
 - support for descent data in exercises (GitHub PR #190)
   - descent is an optional Exercise attribute, shown also in Overview Diagram
     and Statistic Calculation
   - ExerciseViewer reads and displays descent data (for Garmin FIT files only)
     (contributed by Alex Jarosch, completed by Stefan Saring)
   - ExerciseViewer reads and displays total cycles of cadence data, e.g.
     rotations for cycling or steps for running (for Garmin FIT files only)
     (contributed by Alex Jarosch, completed by Stefan Saring)
 - support for sport type specific speed modes (Issue #197):